# playwright-python-demo

./: .gitignore  .pre-commit-config.yaml  HOW_TO.md  QUICKSTART.md  README.md  README_ARTIFACTS.md  TEST_ARTIFACTS.md  artifacts.ps1  artifacts.sh  plans  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: copilot-setup-steps.yml  playwright-tests.yml  python-ci.yml
docs/: basic_cart_test_plan.md  seven_char_val_test_plan.md  triangle_test_plan.md
mcp/: package-lock.json  package.json  playwright.config.js
pages/: basic_cart_page.py  seven_char_val_page.py  triangle_page.py
src/: base_page.py
tests/: .pre-commit-config.yaml  conftest.py
tests/basic_cart/: test_basic_cart.py
tests/basics/: test_basic_web_page.py  test_iterate_pages.py
tests/seven_char_val/: test_seven_char_val.py
tests/triangle/: test_artifacts_check.py  test_triangle.py
