[project]
name = "playwright-python-demo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"] # bo trzymamy line-length, ale nie chcemy wojen o długie stringi

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# [tool.mypy]
# python_version = "3.11"
# warn_return_any = true
# warn_unused_configs = true
# disallow_untyped_defs = false
# no_implicit_optional = true